Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-80081

DirectionalLight shadow disappears at spesific angle

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • 5.14
    • 5.14.0 Beta3
    • Quick: 3D
    • None
    • 1475b00bacf3f6b0b5581cd7e621e5c0f8340a93

    Description

      DirectionalLight shadow disappears when rotation is at specific angle. Can be tested with lights example, disabling DirectionalLight animation and changing rotation to Qt.vector3d(91,90,0) (works) or Qt.vector3d(90,90,0) (Doesn't work, no shadow).

      Attached screenshots with both angles.

      Attachments

        1. directionallight_x_at_90.jpg
          22 kB
          Kaj Grönholm
        2. directionallight_x_at_91.jpg
          22 kB
          Kaj Grönholm
        For Gerrit Dashboard: QTBUG-80081
        # Subject Branch Project Status CR V

        Activity

          People

            anmaatta Antti Määttä
            kagro Kaj Grönholm
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes