Fix directional light shadows from certain angles

Fix calculating right and up vectors when the forward is parallel to
vector3d(0,1,0).

Task-number: QTBUG-80081
Change-Id: I3318e84836aaa011dc9df5dfc0a71925d4c96f1f
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>